[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Felix <stegmaier.felix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.25"
daggy = "0.6.0"
either = "1.5.3"
itertools = "0.8.2"
thiserror = "1.0.9"
rayon = "1.3.0"

[[bin]]
name = "01-1"
path = "src/01-1.rs"

[[bin]]
name = "01-2"
path = "src/01-2.rs"

[[bin]]
name = "02-1"
path = "src/02-1.rs"

[[bin]]
name = "02-2"
path = "src/02-2.rs"

[[bin]]
name = "03-1"
path = "src/03-1.rs"

[[bin]]
name = "03-2"
path = "src/03-2.rs"

[[bin]]
name = "04-1"
path = "src/04-1.rs"

[[bin]]
name = "04-2"
path = "src/04-2.rs"

[[bin]]
name = "06-1"
path = "src/06-1.rs"

[[bin]]
name = "06-2"
path = "src/06-2.rs"

[[bin]]
name = "08-1"
path = "src/08-1.rs"

[[bin]]
name = "08-2"
path = "src/08-2.rs"

[[bin]]
name = "12-1"
path = "src/12-1.rs"

[[bin]]
name = "12-2"
path = "src/12-2.rs"

[[bin]]
name = "14-1"
path = "src/14-1.rs"

[[bin]]
name = "16-1"
path = "src/16-1.rs"

[[bin]]
name = "16-2"
path = "src/16-2.rs"